# GenMesh

./: .gitignore  CMakeLists.txt  README.md  TODO.md  doxygen.conf
Architecture/Mesh/: Architecture.md  Concept du maillage.md  Entity.md  Mesh.md  Shape.md  Topology.md
Architecture/Mesh/.obsidian/: graph.json  workspace.json
include/: file_functions.h  graph.h  io.h  macros.h
include/core/: log.h
include/mesh/: entity.h  entity_view.h  geometry.h  mesh.h  simplex.h  topology.h
include/mesh/geometry/: geometry.h
include/mesh/topology/: connectivities.h  incidence.h  shape.h  topology.h
mesh/: CMakeLists.txt  mesh.cpp
test_files/: test2_3d.msh  test_1d.msh  test_2d.msh  test_2d_hybrid.msh  test_3d_hybrid.msh
tests/: CMakeLists.txt
tests/mesh/: CMakeLists.txt  connectivities.h  connectivities_hybrid.h  main.cpp
